# penguin-tower

./: .gdbinit.in  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  anim.py  array2d.py  bot.py  botserver.py  chvec.py  cliberty.py  config.py  configure  configure.ac  extractPNG.py  fonthilltower.py  old.py  penguin-tower.py  testanim2.py
data/: Makefile.am  Makefile.in  manW.n  mann.n  mans.n
doc/: ptower.texi
maps/: star
src/: .gdbinit  AdvCmd.def  AdvCmd.mod  AdvConnect.mod  AdvIntroduction.mod  AdvMap.def  AdvMath.def  AdvMath.mod  AdvSystem.def  AdvSystem.mod  AdvTreasure.def  AdvTreasure.mod  AdvUtil.def  AdvUtil.mod  DrawG.def  DrawG.mod  DrawL.def  DrawL.mod  Makefile.am  Makefile.in  README  Screen.def  Screen.mod  SocketControl.c  t2.mod
troff/: ps
